examples/nat/dnatrule.yaml
apiVersion: nat.flexibleengine.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: nat/v1beta1/gateway
  labels:
    testing.upbound.io/example-name: gateway_1
  name: gateway-1
spec:
  forProvider:
    description: test for terraform
    name: gateway-1
    spec: "1"
    subnetIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example_subnet
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: example_vpc

---
