examples/nat/snatrule.yaml
apiVersion: nat.flexibleengine.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: nat/v1beta1/gateway
  labels:
    testing.upbound.io/example-name: gateway_1
  name: gateway-1
spec:
  forProvider:
    description: test for terraform
    name: example-nat-gw
    spec: "1"
    subnetIdSelector:
      matchLabels:
        testing.upbound.io/example-name: subnet_v1
    vpcIdSelector:
      matchLabels:
        testing.upbound.io/example-name: vpc_v1

---
